updates with 2025 updates

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="lead">
       <div id="lead-content">
         <h1>Luke Jung</h1>
-        <h2>Amazon SDE 1</h2>
+        <h2>Amazon SDE II</h2>
         <a
           href="./files/Luke-Jung-Resume.pdf"
           target="_blank"
@@ -77,30 +77,58 @@
         <div class="row">
           <h2 class="heading">About Me</h2>
           <p>
-            I am currently a Software Development Engineer at Amazon working on Prime Video Live Events. 
-            We develop mostly React web applications powered by a java backend.  I am interested in interesting 
-            projects especially in the gaming industy, email me any questions at lukethejung@gmail.com
+            I am currently a Software Development Engineer II at Amazon working on Prime Video Live Events.
+            We develop mostly APIs powered by a java backend to help publish Amazon and non-Amazon properties.
+            I am interested in interesting projects especially in the gaming industy, email me any questions at
+            lukethejung@gmail.com
           </p>
         </div>
     <!-- End #about -->
     <div id="experience" class="background-alt">
       <h2 class="heading">Experience</h2>
       <div id="experience-timeline">
-        <div data-date="August 2021 – Present">
+        <div data-date="December 2023 – Present">
           <h3>Amazon: Prime Video Live Events</h3>
-          <h4>Software Development Engineer 1</h4>
+          <h4>Software Development Engineer II</h4>
           <ul>
             <li>
-              Developing a React web application for Live Events Management Tool which begins a pipeline of publishing live events on Amazon including live sports and concerts through a java backend model.
+              Drove a strategic system-wide consolidation of the live event publishing pipeline, unifying logic across Amazon and non-Amazon properties, resulting in the deprecation of multiple legacy services and APIs.
             </li>
             <li>
-              Writing and reviewing code changes from team of 6 developers that include functional improvements, integration tests, unit tests, API calls, and front-end changes to increase functionality of tool for customers.
+              Directed a critical system migration for six services, upgrading all connectivity protocols to a mandated Amazon standard and transitioning to new VIPs, ensuring a seamless and secure deployment.
             </li>
             <li>
-              Ensuring operational excellence by participating in an on-call rotation to solve ongoing issues including system availability or code defects which are actively affecting customers.
+              Actively contributed to talent acquisition by conducting over 20 technical and behavioral interviews for Amazon, providing detailed and actionable feedback to hiring teams.
             </li>
             <li>
-              Drafted and presented a design document on an internal project outlining the deprecation of a current system to integration with our current one and provided outlines and workflows for each task.
+              Significantly enhanced the Live Events Publishing platform, contributing approximately 100,000 lines of new code and refactoring 50,000 lines across 84 packages, delivering numerous features and bug fixes.
+            </li>
+            <li>
+              Spearheaded and successfully executed an operational campaign to eliminate the team's ticket backlog, achieving a historic first by reducing the queue to zero.
+            </li>
+          </ul>
+        </div>
+        <div data-date="August 2021 – December 2023">
+          <h3>Amazon: Prime Video Live Events</h3>
+          <h4>Software Development Engineer I</h4>
+          <ul>
+            <li>
+              Led the full software development lifecycle for a partner broadcast metadata history tool, from design and cross-team review to implementation, testing, and launch, ensuring seamless visibility for non-Amazon live event publishing.
+            </li>
+            <li>
+              Mentored and onboarded multiple interns and new hires, designing engaging projects, fostering best practices, and demystifying the Amazon tech stack, resulting in successful project releases.
+            </li>
+            <li>
+              Architected and implemented a globalized image localization system for live event publishing, enabling dynamic image display based on viewer locale across the Amazon platform.
+            </li>
+            <li>
+              Developed a data pipeline with fellow data engineers to provide reporting on specific operator overrides, replacing a manual report and saved 5-8 hours per week for live event publishing operators.
+            </li>
+            <li>
+              Collaborated with data engineers to automate operator override reporting, replacing manual processes and saving 5-8 hours weekly for live event publishing operators.
+            </li>
+            <li>
+              Provided technical leadership in feature development and operational support for Sports Partner Integrations reporting, establishing core infrastructure, comprehensive testing, monitoring, and operational documentation.
             </li>
           </ul>
         </div>
@@ -377,6 +405,7 @@
       <ul>
         <li>JavaScript</li>
         <li>Python</li>
+        <li>Kotlin</li>
         <li>Java</li>
         <li>C</li>
         <li>C++</li>
@@ -407,7 +436,7 @@
       <h2 class="heading">Contact</h2>
       <br />
       <h3 class="heading">
-        Email: lukejung@ucla.edu<br />
+        Email: lukethejung@gmail.com<br />
         Phone Number: 858-342-6779
       </h3>
     </div>
@@ -416,7 +445,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-5 copyright">
-            <p>Copyright &copy; 2020 Luke Jung</p>
+            <p>Copyright &copy; 2025 Luke Jung</p>
           </div>
           <div class="col-sm-2 top">
             <span id="to-top">
